# 2024-cmake

./: .gitignore
Step1/: CMakeLists.txt  tutorial.cxx
Step2/: CMakeLists.txt  tutorial.cxx
Step2/MathFunctions/: CMakeLists.txt  MathFunctions.cxx  mysqrt.cxx
